tdf#92848: SvxTableShape doesn't implement css::text::XTextAppend

...so don't let it announce that in getTypes().

Change-Id: I91324615e6a1857d8deed055345982e41e5d45a2